@@ -15,6 +15,7 @@ Version 2.5.0
 * mk5erase: new option to overwrite module partition.  Might be useful for firmware upgrades.
 * Change .rpm filename to vlbi-mk5daemon.*.rpm
 * mk5cp: report average data rate and total bytes copied.  Use replaced byte counter with lower false detection rate.
+* Periodically (every 30 sec) look at OS swap usage and emit alert if in use
 
 Version 2.4.0
 ~~~~~~~~~~~~~
